--- a/app/templates/pagina_inicial.html
+++ b/app/templates/pagina_inicial.html
@@ -5,6 +5,5 @@
 
 {% block content %}
     <h1>Bem-vindo à Página Inicial</h1>
-    <p>Esta é a página inicial do seu aplicativo Django.</p>
-    <p>Escolha uma opção no menu acima para começar.</p>
+    <p>Escolha uma opção no menu ao lado para começar.</p>
 {% endblock %}
