--- a/static/base.css
+++ b/static/base.css
@@ -13,57 +13,71 @@ body {
     position: fixed;
     left: 0;
     top: 0;
-    width: 20%;  /* Ajuste a largura conforme necessário */
+    width: 20%;
     height: 100%;
     background-color: #007bff;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    transition: width 0.3s ease; /* Adiciona uma transição suave para a largura do menu */
 }
 
 #menu a {
     color: #fff;
     text-decoration: none;
-    margin: 1vw;  /* Ajuste a margem conforme necessário */
-    padding: 1.5vw;  /* Ajuste o preenchimento conforme necessário */
+    margin-top: 1.5vw; /* Ajustado para uma distância maior acima do botão */
+    margin-bottom: 1.5vw; /* Ajustado para uma distância maior abaixo do botão */
+    padding: 1.5vw;
     border-radius: 5px;
     transition: background-color 0.3s ease;
-    font-size: 1.5em;  /* Ajuste o tamanho da fonte conforme necessário */
+    font-size: 1.5em;
+}
+
+#menu a:hover {
+    background-color: #0056b3; /* Adiciona uma cor de fundo mais escura ao passar o mouse */
 }
 
 #content {
     background-color: #fff;
-    border-radius: 5px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    padding: 2vw;  /* Ajuste o preenchimento conforme necessário */
+    border-radius: 50px;
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.2); /* Aumenta a intensidade da sombra */
+    padding: 2vw;
     max-width: 800px;
 }
 
 h1 {
     color: #333;
-    font-size: 2.5em;  /* Ajuste o tamanho da fonte conforme necessário */
+    font-size: 2.5em;
 }
 
 button {
     background-color: #007bff;
     color: #fff;
-    padding: 1.5vw;  /* Ajuste o preenchimento conforme necessário */
+    padding: 1.5vw;
     border: none;
     cursor: pointer;
-    border-radius: 5px;
+    border-radius: 50px;
     transition: background-color 0.3s ease;
-    font-size: 1.2em;  /* Ajuste o tamanho da fonte conforme necessário */
+    font-size: 1.2em;
+}
+
+button:hover {
+    background-color: #0056b3; /* Adiciona uma cor de fundo mais escura ao passar o mouse */
 }
 
 @media (max-width: 768px) {
     #menu {
-        display: none;  /* Oculta o menu em telas menores */
+        width: 0; /* Ajusta a largura para 0 ao ocultar o menu em telas menores */
+    }
+
+    #menu:hover {
+        width: 20%; /* Exibe o menu ao passar o mouse, proporcionando uma experiência mais amigável */
     }
 
     #content {
-        width: 100%;  /* Ajuste a largura conforme necessário */
+        width: 100%;
         margin-left: 0;
     }
 }
